--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@leshen/emily": "^1.1.8",
     "@leshen/lapi": "^1.1.8",
     "@leshen/tcpa": "^1.1.8",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "typeface-averta": "^1.0.3"
   }
 }
