chore: add linting and update pipeline

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -28,7 +28,7 @@ step_definitions:
 pipelines:
   pull-requests:
     "**":
-      - step: *build
+      - step: *lint
   branches:
     master:
     - step: *mirror_to_github
