--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Clearlink CMS",
   "private": true,
   "scripts": {
-    "sandbox:develop": "yarn workspace sandbox build",
+    "sandbox:develop": "yarn workspace sandbox develop",
     "sandbox:build": "yarn workspace sandbox build",
     "lint": "eslint . --ext .js,.jsx,.css"
   },
