--- a/gatsby-theme-content-editing-sandbox/package.json
+++ b/gatsby-theme-content-editing-sandbox/package.json
@@ -3,6 +3,6 @@
   "version": "0.0.0",
   "main": "index.js",
   "dependencies": {
-    "gatsby-theme-leshen": "^0.36.2"
+    "@leshen/gatsby-theme-leshen": "^1.0.0-beta.6"
   }
 }
